# dotfile

./: .gitmodules  .gtkrc-2.0  README.md  betterlockscreenrc  de.sh  enviroment  p10k.zsh  packages.txt  pacman.txt  settings.json  zshrc
alacritty/: alacritty.yml
config/: starship.toml
config/polybar/xrs/: Cargo.toml  README.md  build.rs
config/polybar/xrs/c_src/: pulse_volume.c
config/polybar/xrs/src/: config.rs  draw.rs  icons.rs  main.rs  tray.rs  util.rs
config/polybar/xrs/src/modules/: arch.rs  battery.rs  brightness.rs  clock.rs  cpu.rs  cpu_temp.rs  memory.rs  mod.rs  network.rs  nvidia.rs  volume.rs
config/polybar/xrs/src/modules/workspace/: i3.rs  mod.rs
fish/: config.fish
gtk-3.0/: colors.css  settings.ini
i3/: config  config.save  config.save.1
kde/: krunnerrc  kwinrc  shortcut.kksrc
konsole/: Nordic.colorscheme  Profile 1.profile
lvim/: config.lua
neofetch/: config.conf
nvim/: init.lua
picom/: picom.conf  picom.conf.old  pine
polybar/: config.ini  launch.sh
ranger/: commands.py  rc.conf
rime/: clover.dict.yaml  default.custom.yaml  installation.yaml  luna_pinyin.chengyu.dict.yaml  luna_pinyin.extended.dict.yaml  luna_pinyin.food.dict.yaml  luna_pinyin.it.dict.yaml  luna_pinyin.mine1.dict.yaml  luna_pinyin.mine2.dict.yaml  luna_pinyin.mine3.dict.yaml  luna_pinyin.mine4.dict.yaml  luna_pinyin.net_words.dict.yaml  luna_pinyin.network.dict.yaml  luna_pinyin.poem.dict.yaml  user.yaml
rofi/: config.rasi  nord.rasi
sddm/: Main.qml  metadata.desktop
startpage/: README.md  index.html
theme/: Kvantum.tar.xz  README.md
(+211 files in other folders)
